--- a/Inv/Inv/Views/CountsPage.xaml
+++ b/Inv/Inv/Views/CountsPage.xaml
@@ -12,6 +12,9 @@
         <StackLayout
             BindingContext="{Binding Counts}"
             Padding="5">
+            <Label
+                Text="{Binding Counts[0].Item.Description}">
+            </Label>
             <ListView
                 HasUnevenRows="True"
                 IsRefreshing="{Binding IsRefreshing}"
@@ -33,31 +36,24 @@
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="0.5*"/>
+                                    <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <Label
                                     Grid.Column="0"
-                                    FontAttributes="Bold" 
-                                    Text="{Binding Item.Description}">
-                                </Label>
-                                <StackLayout
-                                    Grid.Column="1"
+                                    Text="{Binding Location.Description}"
                                     VerticalOptions="Center">
-                                    <Label
-                                        FontAttributes="Bold" 
-                                        Text="{Binding Location.Description}">
-                                    </Label>
-                                    <Label
-                                        Text="{Binding Bin.Description}">
-                                    </Label>
-                                </StackLayout>
+                                </Label>
+                                <Label
+                                    Grid.Column="1"
+                                    Text="{Binding Bin.Description}"
+                                    VerticalOptions="Center">
+                                </Label>
                                 <Label
                                     Grid.Column="2"
-                                    FontAttributes="Bold" 
-                                    Text="{Binding MeasureUnit.Description}">
+                                    Text="{Binding MeasureUnit.Description}"
+                                    VerticalOptions="Center">
                                 </Label>
-
                                 <Label
                                     Grid.Column="3"
                                     HorizontalOptions="End"
